--- a/observer/index.html
+++ b/observer/index.html
@@ -11,9 +11,8 @@
     <input type="text" id="txtName">
     <button   onclick="add()" >Agregar</button>
 </div>
-<div id="1"></div>
-<div id="2"></div>
-<div id="3"></div>
+<div id="div1"></div>
+<div id="div2"></div>
 
     <script src="js/observer.js"></script>
 </body>
