debugging observer js

--- a/observer/index.html
+++ b/observer/index.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-<div>
-    <label>Nombre:</label>
-    <input type="text" id="txtName">
-    <button onclick="add()" >Agregar</button>
-</div>
-<div id="div1"></div>
-<div id="div2"></div>
-
-    <script src="js/observer.js"></script>
+    <div>
+        <label>Nombre:</label>
+        <input type="text" id="txtName">
+        <button onclick="getValue()" >Agregar</button>
+    </div>
+    <div id="div1"></div>
+    <div id="div2"></div>
+    
+        <script src="js/observer.js"></script>
 </body>
 </html>
