--- a/05 - Architectural/flux/index.html
+++ b/05 - Architectural/flux/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Counter: <span id="counter">0</span></h1>
+    <button id="incrementBtn">Increment</button>
+    <button id="decrementBtn">Decrement</button>
     <script src="js/flux.js"></script>
 </body>
 </html>
